<resources>
    <string name="app_name">Lesson Scheduler</string>

    <string name="test_value">TESTING THIS VIEW</string>
    <string name="test_classes_needed">UNFILLED CLASSES GO HERE</string>
    <string name="init_box_value">3</string>
    <string name="action_settings">Settings</string>
    <string name="action_account">My Account</string>

    <string name="title_activity_sign_up">Enter Organization</string>
    <string name="sign_up_message">Enter User Name and Organization to Login</string>
    <string name="user_name">User Name</string>
    <string name="org">Organization Name</string>
    <string name="title_activity_classes">Classes</string>
    <string name="classes_menu_title">Classes</string>

    <string name="classroom_title">CLASS NAME</string>
    <string name="classroom_description">CLASSROOM DESCRIPTION TO BE PUT HERE</string>
    <string name="title_activity_classroom_edit">Add/Edit Class</string>

    <string name="classroom_edit_name_hint">Class Name</string>
    <string name="classroom_edit_description_hint">Short Description</string>
    <string name="classroom_edit_confirm_button">Confirm</string>
    <string name="classroom_edit_cancel_button">Cancel</string>

    <string name="title_activity_account">My Account</string>
    <string name="user_image_description">User Image</string>
    <string name="account_user_name_label">User Name</string>
    <string name="account_org_label">Organization</string>
    <string name="account_org_default">Your organization</string>
    <string name="account_last_lesson_label">Last Assignment</string>
    <string name="account_last_lesson_default"> </string>
    <string name="account_next_lesson_label">Next Assignment</string>
    <string name="account_next_lesson_default"> </string>
    <string name="account_save_button_label">Apply Changes</string>
    <string name="account_cancel_button_label">Cancel</string>

    <string name="upcoming_title">Make an Assignment</string>
    <string name="title_activity_assign">Make/Edit an Assignment</string>

    <string name="users_menu_title">Users</string>
    <string name="title_activity_users">All Users</string>

    <string name="empty"> </string>
    <string name="log_in_button">Log In</string>
    <string name="sign_up_org_label">Don\'t have an organization yet?</string>
    <string name="create_org_link"><u>Create one</u></string>
    <string name="title_activity_assigned">Current Assignments</string>
    <string name="assignment_top_label">Top Label</string>
    <string name="assignment_middle_label">Middle Label</string>
    <string name="assignment_bottom_label">Bottom Label</string>
    <string name="assignments_menu_title">Assignments</string>
    <string name="title_activity_create">CreateActivity</string>
    <string name="create_message">Choose an organization name</string>
    <string name="create_org_name">Org Name</string>
    <string name="create_code_hint">Code</string>
    <string name="create_org_button">Check</string>
    <string name="create_join_button">Join</string>

</resources>
