<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ntaylor.lessonscheduler.activities.AssignmentsActivity">
    <item
        android:id="@+id/action_upcoming"
        android:orderInCategory="2"
        android:title="@string/upcoming_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_classes"
        android:orderInCategory="3"
        android:title="@string/classes_menu_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_users"
        android:orderInCategory="4"
        android:title="@string/users_menu_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_account"
        android:orderInCategory="100"
        android:title="@string/action_account"
        app:showAsAction="never" />
</menu>
