<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".fragments.AccountFragment"
    tools:showIn="@layout/activity_account">

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vertical"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3"
        />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vertical_half"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/user_image_descripton"
        android:src="@drawable/ic_mood_black_24dp"
        app:layout_constraintEnd_toStartOf="@+id/vertical"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/account_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/vertical"
        app:layout_constraintTop_toBottomOf="@+id/account_user_label" />

    <TextView
        android:id="@+id/account_user_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/account_user_name_label"
        android:textSize="@dimen/account_label_size"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/vertical"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/account_org_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/account_org_label"
        android:textSize="@dimen/account_label_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/account_org"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/account_org_default"
        android:textSize="@dimen/account_label_size"
        app:layout_constraintStart_toEndOf="@+id/account_org_label"
        app:layout_constraintTop_toTopOf="@+id/account_org_label" />

    <TextView
        android:id="@+id/account_last_lesson_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textSize="@dimen/account_label_size"
        android:textStyle="bold"
        android:text="@string/account_last_lesson_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_org_label" />

    <TextView
        android:id="@+id/account_last_lesson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/account_last_lesson_default"
        android:textSize="@dimen/account_label_size"
        app:layout_constraintStart_toEndOf="@+id/vertical"
        app:layout_constraintTop_toTopOf="@+id/account_last_lesson_label" />

    <Button
        android:id="@+id/account_save_button"
        android:layout_width="@dimen/account_button_width"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/account_save_button_label"
        app:layout_constraintEnd_toStartOf="@+id/vertical_half"
        app:layout_constraintTop_toBottomOf="@+id/account_last_lesson" />

    <Button
        android:id="@+id/account_cancel_button"
        android:layout_width="@dimen/account_button_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/account_cancel_button_label"
        app:layout_constraintStart_toEndOf="@+id/vertical_half"
        app:layout_constraintTop_toTopOf="@+id/account_save_button" />

</android.support.constraint.ConstraintLayout>