<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".fragments.CreateFragment"
    tools:showIn="@layout/activity_create">

    <TextView
        android:id="@+id/create_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="@dimen/create_message_size"
        android:text="@string/create_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/create_org_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/create_org_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_message" />

    <EditText
        android:id="@+id/create_org_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/create_code_hint"
        app:layout_constraintStart_toStartOf="@+id/create_org_name"
        app:layout_constraintTop_toBottomOf="@+id/create_org_name" />

    <Button
        android:id="@+id/create_org_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/create_org_button"
        app:layout_constraintStart_toEndOf="@+id/create_org_name"
        app:layout_constraintTop_toTopOf="@+id/create_org_name" />

    <View
        android:id="@+id/create_divider"
        style="@style/Divider"
        android:layout_marginEnd="@dimen/divider_margin"
        android:layout_marginStart="@dimen/divider_margin"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_org_code" />

</android.support.constraint.ConstraintLayout>