<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".fragments.ClassroomEditFragment"
    tools:showIn="@layout/activity_classroom_edit">


    <EditText
        android:id="@+id/classroom_edit_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:hint="@string/classroom_edit_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/classroom_edit_description_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/classroom_edit_description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:hint="@string/classroom_edit_description_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_guide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/classroom_edit_confirm_button"
        android:layout_width="@dimen/classroom_edit_button_size"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/classroom_edit_confirm_button"
        app:layout_constraintEnd_toStartOf="@+id/vertical_half"
        app:layout_constraintTop_toTopOf="@+id/horizontal_guide" />

    <Button
        android:id="@+id/classroom_edit_delete_button"
        android:layout_width="@dimen/classroom_edit_button_size"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/classroom_edit_cancel_button"
        app:layout_constraintStart_toEndOf="@+id/vertical_half"
        app:layout_constraintTop_toTopOf="@+id/horizontal_guide" />

    <android.support.constraint.Guideline
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/vertical_half"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.5"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontal_guide"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"/>

</android.support.constraint.ConstraintLayout>