<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/list_item_padding_bottom">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:background="@drawable/rounded_rect_green">

        <ImageView
            android:id="@+id/assignment_image"
            android:layout_width="@dimen/box_size"
            android:layout_height="@dimen/box_size"
            android:layout_marginStart="8dp"
            android:src="@drawable/checkmark_green_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/assignment_top_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/assignment_top_label"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/assignment_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/assignment_middle_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/assignment_middle_label"
            app:layout_constraintStart_toStartOf="@+id/assignment_top_label"
            app:layout_constraintTop_toBottomOf="@+id/assignment_top_label" />

        <TextView
            android:id="@+id/assignment_bottom_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/assignment_bottom_label"
            app:layout_constraintStart_toStartOf="@+id/assignment_middle_label"
            app:layout_constraintTop_toBottomOf="@+id/assignment_middle_label" />

        <ImageButton
            android:id="@+id/assignment_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@null"
            android:src="@android:drawable/ic_menu_delete" />


    </android.support.constraint.ConstraintLayout>

</LinearLayout>
